[package]
name = "axum-session-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
axum-extra = { version = "0.9.3", features = ["cookie"] }
http = "1.1.0"
tower = "0.4.13"
tower-service = "0.3.2"

[[example]]
name = "auth-mid"

[dev-dependencies]
axum = "0.7.5"
tokio ={ version = "1.38.0", features = ["full"]}
axum-session-manager ={ path = "../axum-session-manager"}
thiserror = "*"
async-trait = "*"
uuid ={ version = "*", features = ["v4"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "*"