[package]
name = "axum-session-manager"
version = "0.1.1"
readme = "README.md"
repository = "https://github.com/nakaryo716/axum-session-manager"
license = "MIT"
description = """
Session manager crate for Rust web framework 'Axum' 
"""
keywords = ["session", "axum"]
documentation = "https://docs.rs/axum-session-manager"
categories = ["web-programming", "asynchronous"]
edition = "2021"

[dependencies]
async-trait = "0.1.81"
axum-extra = { version = "0.9.3", features = ["cookie"] }
http = "1.1.0"
tower = "0.4.13"
tower-service = "0.3.2"

[[example]]
name = "auth-mid"

[dev-dependencies]
axum = "0.7.5"
tokio ={ version = "1.38.0", features = ["full"]}
axum-session-manager ={ path = "../axum-session-manager"}
thiserror = "1.0.63"
async-trait = "0.1.81"
uuid ={ version = "1.10.0", features = ["v4"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"